# Assignment-Template-Python

./: .gitignore  codebook.toml  pyproject.toml  readme.md  setup.cfg
.zed/: debug.json  settings.json
artifacts/: Daten_Knoten.xlsx
dockerfiles/: latex.Dockerfile
documentation/: main.tex
documentation/Kapitel/: 00-deckblatt.tex  01-TaskDescription.tex  02-Approach.tex
documentation/Meta/: commands.tex  header.tex  silbentrennung.tex
src/heuristic_lab/: __main__.py
