[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heuristic_search"
version = "0.1.0"  # Hier die Version hinzufügen
description = "Heuristic search Lab"
authors = [{name = "Felix Schmidt", email = "Felix-Schmidt2@outlook.de"}]
license-files = ["LICEN[CS]E*"]
dynamic = ["optional-dependencies", "classifiers",
            "dependencies", "requires-python",
            "readme", "urls"]

# Weitere optionale Konfigurationen
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
