[metadata]
name = PlantUML 2 HDL
version = 0.1.0
description = A tool to convert PlantUML diagrams to HDL code
long_description = file: README.md
long_description_content_type = text/markdown
author = Felix Schmidt
author_email = Felix-Schmidt2@outlook.de
url = https://github.com/BuildersInc/lab_heuristic_search
classifiers =
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
package_dir =
    = src

# install_requires =

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
dev =
    pytest
    black
    flake8
